edit fetch the API and create a form

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
        
         <select name="coin" id="coin">
           {% for item in coinname %}
-          <option name="symbol"> {{item}} </option>
+          <option name="symbol"> {{item.symbol}} </option>
           {% endfor %}
         </select>
         
